--- a/garden.css
+++ b/garden.css
@@ -1,101 +1,126 @@
 body {
-  font-size: 22px;
-  color: #333;
+    font-size: 140%;
+    color: #333;
+    padding: 10px;
 }
 
 * {
-  font-family: Arial, sans-serif;
-  padding: 0;
-  margin: 0;
+    font-family: Arial, sans-serif;
+    padding: 0;
+    margin: 0;
 }
 
 h1 {
-  padding: 10px;
-  font-size: 150%;
-  color: black;
-  text-align: center;
+    padding: 10px;
+    font-size: 2.1rem;
+    color: black;
+    text-align: center;
 }
 
 h2 {
-  font-size: 125%;
-  color: black;
-  padding: 10px;
+    font-size: 1.7rem;
+    color: black;
+    padding: 0 0 10px 10px;
+    margin-top: 2rem;
 }
 
 h3 {
-  font-size: 100%;
-  color: black;
-  padding: 10px;
+    font-size: 1.35rem;
+    color: black;
+    padding: 10px;
 }
 
 h2.comments {
-  padding: 55px 0 10px 10px;
+    padding: 55px 0 10px 10px;
 }
 
 p {
-  padding: 10px;
+    padding: 10px;
 }
 
 ol li,
 ul li {
-  margin: 0 0 0 41px;
-  padding: 5px 0;
+    margin: 0 0 0 41px;
+    padding: 5px 0;
 }
 
 td {
-  padding: 2px 5px;
-  vertical-align: top;
+    padding: 2px 5px;
+    vertical-align: top;
 }
 
 tr td:first-child {
-  color: rgb(68, 105, 39);
-  font-weight: bold;
-  font-style: italic;
+    color: rgb(68, 105, 39);
+    font-weight: bold;
+    font-style: italic;
 }
 
 hr {
-  margin: 5x 0px;
-  background: #999;
-  height: 2px;
-  border: none;
+    margin: 5x 0px;
+    background: #999;
+    height: 2px;
+    border: none;
 }
 
 em {
-  color: #0E7003;
+    color: #0E7003;
 }
 
-/* Recipes */
-#plants li {
-  list-style: none;
-  border: 2px solid white;
+/* index */
+.index li {
+    list-style: none;
+    border: 2px solid white;
 }
 
-#plants a {
-  background: #eee;
-  color: black;
-  text-decoration: none;
-  display: block;
-  padding: 5px 0 5px 20px;
+.index a {
+    background: #eee;
+    color: black;
+    text-decoration: none;
+    display: block;
+    padding: 5px 0 5px 20px;
 }
 
-ul.plant-info li ul li {
-  font-size: 80%;
-  margin: 0 0 0 28px;
-  list-style-type: square;
-  padding: 3px 0;
+.index a:hover {
+    background: #f4d9ff;
 }
 
-#main small {
-  margin-left: 17px;
-  padding-top: 10px;
-  display: block;
+.index li {
+    margin: 0;
+    border: 0 !important;
+    line-height: 2.2rem;
+    padding: 2px 0;
+}
+
+small {
+    margin-left: 17px;
+    padding-top: 10px;
+    display: block;
 }
 
 img {
-  margin: 0 10px;
-  max-width: 95vw;
-  max-height: 95vh;
+    margin: 0 10px;
+    max-width: 95vw;
+    max-height: 95vh;
 }
 
+/* Bootstrap */
 
-@media only screen and (max-device-width: 480px) {}
+.mt-1 {
+    margin-top: 0.25rem;
+}
+
+.mt-2 {
+    margin-top: 0.5rem;
+}
+
+.mt-3 {
+    margin-top: 1rem !important;
+}
+
+.mt-4 {
+    margin-top: 1.5rem ! important;
+}
+
+.mt-5 {
+    margin-top: 3rem !important;
+}
