--- a/house.css
+++ b/house.css
@@ -30,6 +30,13 @@ h3 {
     padding: 10px 5px;
 }
 
+ol li,
+ul li {
+    margin: 0 0 0 26px;
+    padding: 5px 0;
+    list-style-type: disc;
+}
+
 p {
     padding: 10px;
 }
@@ -47,20 +54,28 @@ hr {
 }
 
 /* Table */
-tr td:nth-child(2) {
-    text-align: center;
+.blinds tr *:nth-child(2) {
     min-width: 40px;
+}
+
+tr *:nth-child(1),
+.blinds tr *:nth-child(5),
+.curtains tr *:nth-child(3) {
+    text-align: left;
+}
+
+.blinds tr *:nth-child(2),
+.blinds tr *:nth-child(3),
+.blinds tr *:nth-child(4),
+.curtains tr *:nth-child(2) {
+    text-align: center;
 }
 
 td.subheading {
     text-align: left;
-    border-bottom: 2px solid #aaa;
+    border-bottom: 2px solid #ddd;
     padding-top: 1rem;
     font-weight: bold;
-}
-
-.text-left {
-    text-align: left;
 }
 
 /* Bootstrap */
