--- a/house.css
+++ b/house.css
@@ -41,9 +41,14 @@ p {
     padding: 10px;
 }
 
+table {
+    border-collapse: collapse;
+}
+
 td, th {
     padding: 2px 5px;
     vertical-align: top;
+    border: 1px solid #ddd;
 }
 
 img {
